added deployed url

--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
                 <div class="portfolio-item-thumbnail">
                    <img src="images/portfolio.png" alt="portfolio item thumb">
                 </div>
-                <h3 class="portfolio-item-title">Shopping Cart</h3>
+                <h3 class="portfolio-item-title">Portfolio Website</h3>
                 <button type="button" class="btn view-project-btn">View project</button>
                <div class="portfolio-item-details">
                 <div class="description">
@@ -326,8 +326,8 @@
                       <!--   <li>Created <span>4 dez 2023</span></li>
                         <li>Technologies Used <span>HTML, CSS , JS</span></li>
                         <li>Role - <span>Frontend</span></li>-->
-                        <li>View Source Code <span><a href="https://github.com/jins28/ShoppingCart_React">Github - Shopping Cart App</a></span></li>
-                        <li>View Online <span><a href="https://shopping-cart-ygeq.onrender.com/">Portfolio Website</a></span></li>
+                        <li>View Source Code <span><a href="https://github.com/jins28/portfolio_using_html_css_js"> Github - Portfolio Website</a></span></li>
+                        <li>View Online <span><a href="https://portfolio-frontend-developer1.netlify.app/">Portfolio Website</a></span></li>
                     </ul>
                 </div>
                </div>
