--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                                 </div>
                             </div>
                              <!--Experience end-->
-                             <a href="juniordeveloper.pdf" target="_blank" class="btn">Download CV</a>
+                             <a href="cv.pdf" target="_blank" class="btn">Download CV</a>
                              <a href="#contact" class="btn link-item">Contact Me</a>
                 </div>
            </div>
