--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 </div>
                 <div class="home-img">
                     <div class="img-box">
-                        <img src="images/profilepic.png" alt="profile-pic">
+                        <img src="images/profilepic.jpg" alt="profile-pic">
                     </div>
                 </div>
             </div>
@@ -85,7 +85,7 @@
            <div class="row">
                 <div class="about-img">
                     <div class="img-box">
-                        <img src="images/profilepic.png" alt="about image">
+                        <img src="images/profilepic.jpg" alt="about image">
                     </div>
                 </div>
                 <div class="about-text">
