added new project to portfolio section

--- a/index.html
+++ b/index.html
@@ -333,7 +333,32 @@
                </div>
             </div>
                <!--Portfolio Item End5-->
-               
+               <!--Portfolio Item start6-->
+               <div class="portfolio-item">
+                <div class="portfolio-item-thumbnail">
+                   <img src="images/facebook.png" alt="portfolio item thumb">
+                </div>
+                <h3 class="portfolio-item-title">Facebook UI Clone </h3>
+                <button type="button" class="btn view-project-btn">View project</button>
+               <div class="portfolio-item-details">
+                <div class="description">
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                        Vero earum explicabo quos possimus, officia aspernatur debitis 
+                        sequi odit ipsa rem facilis excepturi laudantium, 
+                        repudiandae quod est. Debitis quis non fugiat?</p>
+                </div>
+                <div class="general-info">
+                    <ul>
+                      <!--   <li>Created <span>4 dez 2023</span></li>
+                        <li>Technologies Used <span>HTML, CSS , JS</span></li>
+                        <li>Role - <span>Frontend</span></li>-->
+                        <li>View Source Code <span><a href="https://github.com/jins28/Facebook_UIclone_HTML_CSS_Javascript"> Github - Facebook Clone</a></span></li>
+                        <li>View Online <span><a href="https://facebook-design-clone-html-css-js.netlify.app/">Facebook Clone</a></span></li>
+                    </ul>
+                </div>
+               </div>
+            </div>
+            <!--Portfolio Item End6-->
             </div>
         </div>
     </section>
