added new project to portfolio

--- a/index.html
+++ b/index.html
@@ -359,6 +359,32 @@
                </div>
             </div>
             <!--Portfolio Item End6-->
+            <!--Portfolio Item start7-->
+            <div class="portfolio-item">
+                <div class="portfolio-item-thumbnail">
+                   <img src="images/ECOMMERCE.png" alt="portfolio item thumb">
+                </div>
+                <h3 class="portfolio-item-title">Ecommerce App Using REACT </h3>
+                <button type="button" class="btn view-project-btn">View project</button>
+               <div class="portfolio-item-details">
+                <div class="description">
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                        Vero earum explicabo quos possimus, officia aspernatur debitis 
+                        sequi odit ipsa rem facilis excepturi laudantium, 
+                        repudiandae quod est. Debitis quis non fugiat?</p>
+                </div>
+                <div class="general-info">
+                    <ul>
+                      <!--   <li>Created <span>4 dez 2023</span></li>
+                        <li>Technologies Used <span>HTML, CSS , JS</span></li>
+                        <li>Role - <span>Frontend</span></li>-->
+                        <li>View Source Code <span><a href="https://github.com/jins28/ecommerce_react"> Github - Ecommerce App</a></span></li>
+                        <li>View Online <span><a href="https://ecommerce-react-shopper.netlify.app/">Ecommerce App</a></span></li>
+                    </ul>
+                </div>
+               </div>
+            </div>
+            <!--Portfolio 7 End-->
             </div>
         </div>
     </section>
